# writecraft

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  CODE_QUALITY_PLAN.md  CONTRIBUTING.md  LANDING_PAGE_SPEC.md  README.md  RELEASE.md  build.sh  bundle-macos.sh  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
specs/: phase-0-init.md  phase-1-skeleton.md  phase-2-editor.md  phase-3-chat-ui.md  phase-4-claude-api.md  phase-5-editing-loop.md  phase-6-polish.md
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  claude.rs  file.rs  keychain.rs  mod.rs
src-tauri/src/models/: mod.rs  sidecar.rs
src/lib/: test-setup.ts
src/lib/components/: EditorPlaceholder.svelte  MenuBar.svelte  MetadataPanel.svelte  ProBadge.svelte  StageSelector.svelte  TitleBar.svelte
src/lib/config/: billing.ts
src/lib/editor/: index.ts  markdown-types.ts  raw-markdown-block.ts  tiptap-config.ts
src/lib/prompts/: system.ts
src/lib/services/: agent.ts  analytics.ts  claude.ts  export.ts  updater.ts
src/lib/stores/: apiKey.svelte.ts  auth.svelte.ts  chat.svelte.ts  document.svelte.ts  editor.svelte.ts  preferences.svelte.ts  recents.svelte.ts
src/lib/tools/: definitions.ts  executor.test.ts  executor.ts  schemas.test.ts  schemas.ts
src/lib/types/: sidecar.ts  tools.ts
src/lib/utils/: conflicts.test.ts  conflicts.ts  diff.test.ts  diff.ts  errors.test.ts  errors.ts  text.test.ts  text.ts
src/routes/: +layout.svelte  +page.svelte
supabase/: .env.example  config.toml
supabase/functions/_shared/: cors.ts  supabase.ts
supabase/functions/claude-proxy/: index.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/get-subscription/: index.ts
supabase/migrations/: 20250122000000_initial_schema.sql
(+29 files in other folders)
