[package]
name = "writecraft"
version = "0.1.0"
description = "A macOS writing app that helps you go from messy idea to polished draft"
authors = ["WriteCraft"]
edition = "2021"

[lib]
name = "writecraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "sync"] }
thiserror = "1"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
